# Mr-Robot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  docker-compose.yaml  dockerfile  entrypoint.sh  git.py  git_api.py  lavalink_application.yml  logging_config.json  pyproject.toml  requirements.txt  tmux.sh  utils.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker_image.yml  lint.yml
Cogs/: ai.py  command_error_handling.py  delete_button_listner.py  fun.py  greeting.py  join_alert.py  misc.py  moderation.py  music.py  os_cmd.py  status.py  ticket-system.py  translate.py
Service_Files/: mr-robot-container.service
mr_robot/: __main__.py  bot.py  checks.py  constants.py  log.py  utils.py
mr_robot/Cogs/: ai.py  command_error_handling.py  delete_button_listner.py  fun.py  greeting.py  join_alert.py  misc.py  moderation.py  music.py  os_cmd.py  status.py  ticket-system.py  translate.py
mr_robot/database/: __init__.py  base.py  greeter.py  guild.py  music.py  temprole.py  ticketsystem.py
mr_robot/exts/: ai.py  command_error_handling.py  delete_button_listner.py  fun.py  greeter.py  greeting.py  join_alert.py  misc.py  moderation.py  music.py  nsfw.py  os_cmd.py  player.py  status.py  ticket-system.py  ticket_system.py  translate.py
mr_robot/exts/backend/: delete_button_listener.py  error_handler.py  exc_time_logger.py
mr_robot/utils/: extensions.py  git_api.py  helpers.py  messages.py  paginator.py
