[tool.poetry]
name = "mr-robot"
version = "1.1.0"
description = ""
authors = ["Known_Black_Hat <knownblackhat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
disnake = "^2.8.1"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
aiofiles = "^23.2.1"
bs4 = "^0.0.2"
requests = "^2.31.0"
google-generativeai = "^0.5.2"
pillow = "^10.3.0"
psutil = "^5.9.8"
aiocache = "^0.12.2"
setuptools = "^69.5.1"
pynacl = "^1.5.0"
httpx = "^0.27.0"
googletrans-py = "^4.0.0"
mafic = "~2.10.0"
sqlalchemy = "^2.0.31"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
